# pilot

./: .gitignore  CMakeLists.txt  README.md
beams/: Beams.cxx  Beams.h  CMakeLists.txt  Config.cxx  Config.h  DataSetFactory.cxx  DataSetFactory.h  Intersections.cxx  Intersections.h  Math.h  Profiler.cxx  Profiler.h  Result.h  SceneFactory.cxx  SceneFactory.h  Timer.cxx  Timer.h  _Window.cxx  _Window.h  main.cxx  notes.txt  run.sh
beams/mpi/: Messenger.cxx  Messenger.h  MpiEnv.cxx  MpiEnv.h
beams/rendering/: BonsaiScene.cxx  BonsaiScene.h  BoundsMap.cxx  BoundsMap.h  EngineScene.cxx  EngineScene.h  FileSceneBase.cxx  FileSceneBase.h  FootScene.cxx  FootScene.h  HeadScene.cxx  HeadScene.h  Light.cxx  Light.h  LightCollection.cxx  LightCollection.h  LightRayOperations.h  LightRays.h  LightedVolumeRenderer.cxx  LightedVolumeRenderer.h  Lights.h  MapperLightedVolume.cxx  MapperLightedVolume.h  PointLight.h  Random.h  RectilinearMeshOracle.h  Sampling.h  Scene.h  SpheresScene.cxx  SpheresScene.h  SubdividedSpheresScene.cxx  SubdividedSpheresScene.h  TransmittanceMap.h  TransmittanceMessenger.h  VortexPatchScene.cxx  VortexPatchScene.h
beams/sources/: CoordinatesType.h  Spheres.cxx  Spheres.h
beams/utils/: File.cxx  File.h  Fmt.h  Json.h  Random.h  args.hxx  picojson.h
convert/: CMakeLists.txt  Chunk.cxx  Chunk.h  DataSet.h  IO.h  Result.h  String.h  Transform.cxx  Transform.h  main.cxx
pilot/: CMakeLists.txt  DataSetUtils.h  Debug.h  Logger.h  Result.h  StringUtils.h  System.h  TomlUtils.h
pilot/io/: DataSetUtils.cxx  DataSetUtils.h  FileSystemUtils.cxx  FileSystemUtils.h  PathUtils.cxx  PathUtils.h
pilot/mpi/: Environment.cxx  Environment.h  TopologyShape.h
pilot/staging/: DescriptorResult.h  NamedDescriptor.cxx  NamedDescriptor.h  Stage.cxx  Stage.h  TOMLDescriptor.cxx  TOMLDescriptor.h
pilot/staging/dataset_providers/: Descriptor.cxx  Descriptor.h  Factory.cxx  Factory.h  FileDescriptor.cxx  FileDescriptor.h  SubdividedSpheresDescriptor.cxx  SubdividedSpheresDescriptor.h
pilot/system/: SystemUtils.cxx  SystemUtils.h
pilot/utils/: args.hxx
